[package]
name = "telegram-images"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Robin Lee Powell <robinleepowell@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-tdlib = { version = "0.4.1", features = ["tdjson"] }
tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "time"]}
log = { version = "0.4" }
env_logger = "0.8"
chrono = "0.4"
chrono-tz = "0.8"
config = "0.13"
async-trait = "0.1"
slug = "0.1"
